<resources>
    <string name="app_name">BetterLearn</string>
    <string name="signin">SIGN IN</string>
    <string name="signup">SIGN UP</string>
    <string name="slogan">Best Place Keep In Touch With Your Education</string>
    <string name="Login">LOGIN</string>
    <string name="Email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="name">NAME</string>
    <string name="retypepw">RE-TYPE PASSWORD</string>
    <string name="forgotpw">Forgot Password?</string>
    <string name="teacher">TEACHER</string>
    <string name="student">STUDENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="Institutes">Institutes</string>
    <string name="mycourses">MyCourses</string>
    <string name="announcements">Announcements</string>

    <string name="profilename">David Copperfield</string>
    <string name="my_courses">My Courses</string>
    <string name="coursetitle">Course Title</string>
    <string name="CN">Computer Networks</string>
    <string name="content1">CN-Lecture 1</string>
    <string name="coursecontent2">CN-L1.pdf</string>
    <string name="cnconten4">CN-Meeting Link</string>
    <string name="link">https://teams.microsoft.com/l/meetup-join/19%3ameeting_ZDVlZWNlMjItZDkzYS00Zjk3LWExNmUtMzJhYzBkOWEwNTc5%40thread.v2/0?context=%7b%22Tid%22%3a%2244e3cf94-19c9-4e32-96c3-14f5bf01391a%22%2c%22Oid%22%3a%22128e5aa3-1ce7-47c7-9da8-a251bd20f4b4%22%7d</string>
    <string name="addcontent">AddContent</string>
    <string name="addcourses">AddCourses</string>
    <string name="addinstitute">AddInstitute</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Announcement1">CN lecture is cancelled</string>
    <string name="ann1content">CN lecture for group 4.1 will be cancelled</string>
    <string name="search">Search</string>
    <string name="sliit">SLIIT</string>
    <string name="enrollment">EnrollmentKey</string>
    <string name="enrollbtn">ENROLL</string>
    <string name="nsbm">NSBM</string>
    <string name="college">Trinity College</string>


    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="repassword">Retype Password</string>
    <string name="fg_password">Forgot Password</string>
    <string name="forgot">Forgot Password</string>
    <string name="reqpw">Get New Password</string>
    <string name="aggrement">I agree to the Terms of Use and Privacy Policy.</string>
    <string name="tagline">Best Place Keep In Touch With Your \n Education</string>
    <string name="contactus">Contact Us</string>
    <string name="tele">Telephones : +94 77 8174156</string>
    <string name="fax">Fax Nos : +94 11 2 473645</string>
    <string name="emailaddress">Email : edu2lms@tk.com</string>
    <string name="rate">How do you like? \n Rate your experience.</string>
    <string name="title_activity_mycourse">LMS</string>
    <string name="tab_text_1">Profile</string>
    <string name="tab_text_2">My Courses</string>
    <string name="tab_text_3">Announcements</string>
    <string name="tab_text_4">Assignments</string>
    <string name="tab_text_5">Institutes</string>
    <string name="student_name">Senavirathne KMCL</string>
    <string name="course_title">Mobile App Development</string>
    <string name="course_content">Android studios,Github</string>
    <string name="Course_description">You will learn everything\nabout MAD</string>
    <string name="Annou_title">Submit Your result sheets</string>
    <string name="Annou_content">You need to send your\nlatest result sheet\nto the lecture in charge.</string>
    <string name="Assig_title">MAD Assignment</string>
    <string name="assig_cont">Deadline:08/29/2021\nSubmit before deadline</string>
    <string name="submit_assignment">Submit Assignment</string>
    <string name="select_file">Select File</string>
    <string name="submit">Submit</string>
    <string name="institutes">Institutes</string>
    <string name="shs">SHS Institute</string>
    <string name="entroll">Entroll</string>
    <string name="entroll_key">Entrollment key</string>
    <string name="add_content">Add Content</string>
    <string name="add_course">Add Course</string>
    <string name="add_institute">Add Institute</string>
    <string name="edit_c">Edit Content</string>
    <string name="description">Description</string>
    <string name="show_submissoin">Show Submission</string>
    <string name="submissoin">Submission</string>
    <string name="select_files">Select Files</string>
    <string name="add">Add</string>
    <string name="add_c">Add Content</string>
    <string name="c_name">Course Name</string>
    <string name="add_instructor">Add Instructors</string>
    <string name="name_instructor">Manushi Ekanayake</string>
    <string name="add_i">Add Institute</string>
    <string name="institute_name">Institute Name</string>
    <string name="select_logo">Select Logo</string>
    <string name="add_managers">Add Managers</string>
    <string name="name_manager">Senanayake ABC</string>
    <string name="add_annocement">Add New Announcement</string>
    <string name="edit_annocement">Update Announcement</string>
    <string name="Update">Update</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="sub_link">Submission Link</string>
    <string name="up_sub">Please Upload Submissoin to the GoogleDrive and submit the link</string>
    <string name="add_assignment">Add New Assignment</string>
    <string name="deadline">Deadline</string>
    <string name="details">Details</string>
    <string name="details_submission">You need to email assignment with your id to:\n ass@betterleran.com</string>
    <string name="title">Title</string>
    <string name="shs1">Venus Institute</string>
    <string name="shs2">Mars Institute</string>
    <string name="assignments">Assignments</string>
    <string name="assig">Assignment1</string>
    <string name="assign2">Assignment1.pdf</string>
    <string name="assign3">CN-Assignment</string>
    <string name="assign4">Project Submission</string>
    <string name="assign5">Tutorial Submission</string>
    <string name="getpw">RESET PASSWORD</string>
    <string name="dms">Database Systems</string>
    <string name="cn">Computer Networks</string>
    <string name="algo">Grade 11-Maths</string>
    <string name="courses">Courses</string>
    <string name="selectf">Select File</string>
    <string name="submitbtn">SUBMIT</string>
    <string name="submitAss">Submit Assignments</string>
    <string name="profileEmail">Email</string>
    <string name="profileType">AccountType</string>
    <string name="nullString" />
    <string name="newcourse">NEWCOURSE</string>
    <string name="selectlogo">select logo</string>
    <string name="coursename">Course Name</string>
    <string name="selectinstitute">Select an Insitute!</string>
    <string name="content">Content Type</string>
    <string name="link_1">Link</string>
    <string name="pdf">PDF File</string>
    <string name="select">SELECT</string>
    <string name="addnew">add new</string>
    <string name="all">all</string>
    <string name="selectpdf">select pdf</string>
    <string name="newassignment">New Assignment</string>
    <string name="downloadpdf">Submit Submission</string>
    <string name="Deadline">Deadline: 12/12/2021</string>
    <string name="text">Text</string>
    <string name="downpdf">DOWNLOAD PDF</string>
    <string name="gotolink">GO TO LINK</string>
    <string name="link_desc">Link_description</string>
    <string name="calulator">Calculator</string>
    <string name="reset">reset</string>
    <string name="average">Average</string>
    <string name="sum">sum</string>
    <string name="Sum" />
    <string name="summ">Sum</string>
    <string name="mode">Multiplication</string>
    <string name="grade">Grade</string>
    <string name="Edit">Edit</string>
    <string name="deleteinst">delete institute</string>
    <string name="changeimg">change image</string>
    <string name="deletecrs">Delete Course</string>
    <string name="changekey" />
    <string name="keyy">Edit Enrollment Key</string>


    <string-array name="assignments">
        <item>Assignment Title</item>
        <item>Reflective Journal</item>
        <item>MAD assignment</item>
    </string-array>

    <string-array name="mycourses">
        <item>Course Name</item>
        <item>Mobile Application development</item>
        <item>Ps</item>
    </string-array>
    >>>>>>> Stashed changes
</resources>