<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TabsTeacher">



    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/profileT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/profile"
                android:textColor="@color/light_blue"
                app:backgroundTint="@color/transparent"
                />

            <Button
                android:id="@+id/institutesT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Institutes"
                android:textColor="@color/light_blue"
                app:backgroundTint="@color/transparent"

                />

            <Button
                android:id="@+id/announcementsT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/announcements"
                android:textColor="@color/light_blue"
                app:backgroundTint="@color/transparent"

                />

            <Button
                android:id="@+id/assignmentsT"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/assignments"
                android:textColor="@color/light_blue"
                app:backgroundTint="@color/transparent"

                />









        </LinearLayout>
    </HorizontalScrollView>

</FrameLayout>